--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@reduxjs/toolkit": "^2.8.0",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.501.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
